@@ -19,7 +19,7 @@ private:
 	int bitrate() const;
 
 	bool seek( int, bool );
-	bool read( QByteArray &, int &, TimeStamp &, double & );
+	bool read( Packet &, int & );
 	void abort();
 
 	bool open( const QString & );
